--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
 
     <!-- Place favicon.png in the root directory -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/assets/img/favicon.png" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    
     <!-- Font Icons css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-icons.css">
     <!-- plugins css -->
