--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <!-- Place favicon.png in the root directory -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/assets/img/favicon.png" type="image/x-icon" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=League Spartan:wght@400;700&display=swap" rel="stylesheet">
     
     <!-- Font Icons css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/font-icons.css">
