--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Totally Homez</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Place favicon.png in the root directory -->
     <link rel="shortcut icon" href="%PUBLIC_URL%/assets/img/favicon.png" type="image/x-icon" />
@@ -20,6 +21,10 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css">
     <!-- Responsive css -->
     <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/assets/csscss/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/slick-theme.css"/>
+    <script src="/assets/js/jquery.js"></script>
+    <script src="/assetsjs/slick.min.js"></script>
 
 </head>
 <body>
